--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ ul {
         align-content: center;
         justify-items: center;
         margin-top: 71px;
+        margin-bottom: 110px;
     }
 
 }
